<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="40sp"

        android:layout_margin="10sp"
        android:fontFamily="@font/alatsi"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"

        android:text="@string/back_to_profile"

        android:background="@drawable/back_btn"

        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="30sp"
        android:fontFamily="@font/alatsi"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/update_profile"

        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/username"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="10sp"

        android:fontFamily="@font/alatsi"
        android:background="@drawable/styling_input"
        android:padding="10sp"
        android:layout_marginTop="40sp"
        android:layout_marginRight="25sp"
        android:layout_marginLeft="25sp"

        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10sp"

        android:fontFamily="@font/alatsi"
        android:background="@drawable/styling_input"
        android:padding="10sp"
        android:layout_marginTop="15sp"
        android:layout_marginRight="25sp"
        android:layout_marginLeft="25sp"

        app:layout_constraintTop_toBottomOf="@id/usernameInput"
        />

    <EditText
        android:id="@+id/licensePlateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/licenseplate"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"

        android:fontFamily="@font/alatsi"
        android:background="@drawable/styling_input"
        android:padding="10sp"
        android:layout_marginTop="15sp"
        android:layout_marginRight="25sp"
        android:layout_marginLeft="25sp"

        app:layout_constraintTop_toBottomOf="@id/emailInput"
        />

    <TextView
        android:id="@+id/confirmInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/upload_image"
        android:drawableStart="@drawable/ic_baseline_backup_24"
        android:drawablePadding="10sp"


        android:fontFamily="@font/alatsi"
        android:background="@drawable/styling_input"
        android:padding="10sp"
        android:layout_marginTop="15sp"
        android:layout_marginRight="25sp"
        android:layout_marginLeft="25sp"

        app:layout_constraintTop_toBottomOf="@id/licensePlateInput"
        />

    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/white"
        android:fontFamily="@font/alatsi"
        android:textSize="15sp"
        android:backgroundTint="@color/blue_crayola"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>