<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisActivity">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:padding="10sp"
        android:text="@string/login"
        android:textAlignment="center"
        android:fontFamily="@font/alatsi"
        android:textColor="@color/secondary"
        android:textSize="15sp"
        android:textStyle="bold"

        android:backgroundTint="@color/blue_crayola_light"
        android:layout_margin="10sp"
        app:borderWidth="0dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/headerRegis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:paddingTop="100sp"

        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="40sp"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="99dp" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/username"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="10sp"

        android:fontFamily="@font/alatsi"
        android:background="@drawable/styling_input"
        android:padding="10sp"
        android:layout_marginTop="40sp"
        android:layout_marginRight="25sp"
        android:layout_marginLeft="25sp"

        app:layout_constraintTop_toBottomOf="@id/headerRegis"
        />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10sp"

        android:fontFamily="@font/alatsi"
        android:background="@drawable/styling_input"
        android:padding="10sp"
        android:layout_marginTop="15sp"
        android:layout_marginRight="25sp"
        android:layout_marginLeft="25sp"

        app:layout_constraintTop_toBottomOf="@id/usernameInput"
        />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"

        android:fontFamily="@font/alatsi"
        android:background="@drawable/styling_input"
        android:padding="10sp"
        android:layout_marginTop="15sp"
        android:layout_marginRight="25sp"
        android:layout_marginLeft="25sp"

        app:layout_constraintTop_toBottomOf="@id/emailInput"
        />

    <EditText
        android:id="@+id/confirmInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confPassword"
        android:drawableStart="@drawable/ic_check"
        android:drawablePadding="10sp"

        android:fontFamily="@font/alatsi"
        android:background="@drawable/styling_input"
        android:padding="10sp"
        android:layout_marginTop="15sp"
        android:layout_marginRight="25sp"
        android:layout_marginLeft="25sp"

        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        />

    <Button
        android:id="@+id/btnSubmitRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/black"
        android:fontFamily="@font/alatsi"
        android:textSize="15sp"
        android:backgroundTint="@color/primary"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>