<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".userFragments.MyBookingFragment"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10sp"
        android:fontFamily="@font/alatsi"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/my_booking"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"

        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <EditText
            android:id="@+id/searchEt"
            android:layout_width="150sp"
            android:layout_height="40sp"

            android:layout_marginStart="10sp"
            android:paddingStart="15sp"
            android:fontFamily="@font/alatsi"
            android:hint="@string/search"
            android:background="@drawable/styling_input"

            />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="60sp"
            android:layout_height="50sp"
            android:padding="2sp"
            android:layout_marginStart="10sp"

            android:fontFamily="@font/alatsi"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"


            android:textAllCaps="false"
            android:backgroundTint="@color/primary"
            android:text="@string/search"
            />

        <TextView
            android:id="@+id/timePicker"
            android:layout_width="160sp"
            android:layout_height="40sp"

            android:clickable="true"

            android:layout_marginStart="10sp"
            android:gravity="center"
            android:fontFamily="@font/alatsi"
            android:text="@string/filter_time"

            android:background="@drawable/styling_input"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookingRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/inputLayout"
        android:padding="10sp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>